<resources>
    <string name="app_name">Meet Checker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_classes">Classes</string>
    <string name="menu_presence">Presenças</string>
    <string name="menu_generate_qr_code">Gerar QR Code</string>
    <string name="txtNameText">Nome</string>
    <string name="btnSaveText">Salvar</string>
    <string name="txtStartText">Início</string>
    <string name="txtEndText">Fim</string>
    <string name="txtDateText">Data</string>
</resources>