<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_classes">

    <fragment
        android:id="@+id/nav_classes"
        android:name="com.example.meetchecker.ui.classes.ClassesFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/nav_presence"
        android:name="com.example.meetchecker.ui.presences.PresenceFragment"
        android:label="@string/menu_presence"
        tools:layout="@layout/fragment_presences" />

    <fragment
        android:id="@+id/nav_generate_qr_code"
        android:name="com.example.meetchecker.ui.profile.GenerateQrCodeFragment"
        android:label="@string/menu_generate_qr_code"
        tools:layout="@layout/fragment_generate_qr_code" />
</navigation>